--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>graph 130</title>
 </head>
 <body>
-    
+    <h1>Shane Van Pelt</h1>
+    <h2>Everett Community College - Graph130</h2>
+
+<h3>How many quarters have you attended EvCC?</h3>
+<p>This will be my 6th quarter here at EvCC</p>
+
+<h3>What degree/certificate program are you pursuing</h3>
+<p>I am pursuing a graphic design degree as well as a transferable AA</p>
+
+<h3>Why did you choose this degree/certificate?</h3>
+<p>I decided to choose a graphic design degree because I really enjoy graphic design and have been taking graphic design classes since high school. I want the transferable AA because I do not know if I will try and get another degree after my graphic design degree has been completed.</p>
+
+<h3>What artist/designer inspires you? Why?</h3>
+<p>I currently don't follow any designers or artists. However I would say that Chris Larson and Robert Lake inspire and teach me since they are my teachers and are currently both working in fields really close to my dream job</p>
+
+<h3>What is your favorite color?  (Please, use a hex code and style your answer with that color.)</h3>
+<p>My favorite colors are both Purple and Black</p>
 </body>
 </html>
