--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 <p>I currently don't follow any designers or artists. However I would say that Chris Larson and Robert Lake inspire and teach me since they are my teachers and are currently both working in fields really close to my dream job</p>
 
 <h3>What is your favorite color?  (Please, use a hex code and style your answer with that color.)</h3>
-<p>My favorite colors are both Purple and Black</p>
+<style> 
+p {color: purple}
+</style>
+<p>My favorite color is Purple</p>
 </body>
 </html>
