--- a/pages/history-refactor.html
+++ b/pages/history-refactor.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="pure-g sample">
         <div class="pure-u-1-5"><a href="../index.html">Home</a></div>
-        <div class="pure-u-1-5"><a href="history-refractor.html">History</a></div>
+        <div class="pure-u-1-5"><a href="history-refactor.html">History</a></div>
         <div class="pure-u-1-5"><a href="theater2.html">Theater</a></div>
         <div class="pure-u-1-5"><a href="stew.html">Stew</a></div>
         <div class="pure-u-1-5"><a href="cascades.html">Cascades</a></div>
