Fixed issues with the webpage
fixed some issues

--- a/pages/fluid.html
+++ b/pages/fluid.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
     <main>
-        <article class="pure-g" hero>
+        <article class="pure-g hero">
             <section class="pure-u-2-3">
                 <h1>Fluid Dimensions</h1>
                 <p>So far we have been building our web pages with fixed dimensions. Our sizes have been determined by pixels. That was the old way of building websites when screen sizes were more uniform. Modern websites are viewed on a variety of screen sizes and we want our content to begin to fit to the window it is being viewed in. We will begin to utilize percentages, em, and rem to make our site fluid. To be a proper fluid web site the content should be adjusting and flowing according to the viewport between media breaks.</p>
@@ -29,7 +29,7 @@
             <img src="../images/bruce-lee.jpg" alt="bruce lee">
             </section>
         </article>
-        <article class="pure-g">
+        <article class="pure-g zoe">
             <section class="pure-u-1-5 em">
                 <h3>EM</h3>
                 <p>An em is a unit in the field of typography, equal to the currently specified point size. For example, one em in a 16-point typeface is 16 points. Therefore, this unit is the same for all typefaces at a given point size.[1]
