--- a/pages/cascades.html
+++ b/pages/cascades.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="../styles/cascades.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link href="../styles/cascades.css" rel="stylesheet" type="text/css"> -->
+    <link href="../styles/small.css" rel="stylesheet" type="text/css">
+    <link href="../styles/medium.css" rel="stylesheet" type="text/css" media="screen and (min-width:641px)">
+    <link href="../styles/large.css" rel="stylesheet" type="text/css" media="screen and (min-width:1024px)">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Special+Elite&display=swap" rel="stylesheet">
@@ -71,7 +75,7 @@
         </aside> <!--closes sidebar-->
 
         <footer>
-            <p>content taken from wikipedia (http://en.wikipedia.org/wiki/Cascade_Range) Shane Van Pelt 2024. Everett Community College Graph 130 web coding project.</p>
+            <p>content taken from wikipedia <a href="http://en.wikipedia.org/wiki/Cascade_Range" target="_blank">wikipedia</a>Shane Van Pelt 2024. Everett Community College Graph 130 web coding project.</p>
         </footer>
     </article> <!--closes container-->
 </body>
