added and updated island projects
edited my orcas a bit, and created lopez

--- a/pages/orcas.html
+++ b/pages/orcas.html
@@ -12,8 +12,12 @@
 <body>
     <header>
         <p href="../index.html" target="_blank">go to home</p>
-        <p>logo</p>
-        <p>search</p>
+        <img src="../images/SJIVB.png" alt="SJIVB" class="logo1">
+        <search calss="search">
+            <label for="islands">Search our Site</label>
+            <input type="search"/>
+            <button type="submit">Search</button>
+
         <div class="hero-orcas">
             <h1>orcas island</h1>
         </div>
