--- a/pages/lopez.html
+++ b/pages/lopez.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lopez Island</title>
-    <link href="../styles/islands.css" rel="stylsheet" type="text/css">
+    <link href="../styles/islands.css" rel="stylesheet" type="text/css">
     <link href="../styles/lopez.css" rel="stylesheet" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
