refactored the websites to work for mobile

--- a/pages/stew.html
+++ b/pages/stew.html
@@ -5,7 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stew Recipe</title>
     <link href="../styles/stew.css" rel="stylesheet" type="text/css">
-    
+    <link href="../styles/mobile.css" rel="stylesheet" type="text/css">
+    <!-- <style>
+            /* i {
+                color: brown;
+            }
+
+            .stew-content {
+                width: 560px;
+            } */
+    </style> -->
 </head>
 <body>
     <div class="stew-content">   
