Created a nav for all pages

--- a/index.html
+++ b/index.html
@@ -4,8 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>graph 130</title>
+    <style>
+        h2 {
+            color: white;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
+    <link href="styles/mobile-nav.css" rel="stylesheet" types="text/css">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="page-title">
+            <p>
+                Graph 130 - Spring 2024
+            </p>
+        </div>
+        <a href="#" class="toggle-button"></a>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <div class="navbar-links">
+            <ul>
+                <li><a href="pages/#.html">History</a></li>
+                <li><a href="pages/history-refactor.html">Stew Recipe</a></li>
+                <li><a href="pages/stew.html">Stew Recipe</a></li>
+                <li><a href="pages/theater2.html">Theater Bill</a></li>
+                <li><a href="pages/cascade.html">Cascades</a></li>
+                <li><a href="pages/fluid.html">Fluid</a></li>
+                <li><a href="pages/media-queries.html">Media Queries</a></li>
+                <li><a href="pages/optimizing-images.html">Optimizing Images</a></li>
+                <li><a href="pages/orcas.html">Orcas Island</a></li>
+                <li><a href="pages/lopez.html">Lopez Island/a></li>
+            </ul>
+        </div>
+    </nav>
     <h1>Shane Van Pelt</h1>
     <h2>Everett Community College - Graph130</h2>
 
