--- a/pages/lopez.html
+++ b/pages/lopez.html
@@ -10,8 +10,34 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <link href="../styles/mobile.css" rel="stylesheet" type="text/css">
+<link href="../styles/mobile-nav.css" rel="stylesheet" types="text/css">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="page-title">
+            <p>
+                Graph 130 - Spring 2024
+            </p>
+        </div>
+        <a href="#" class="toggle-button"></a>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <div class="navbar-links">
+            <ul>
+                <li><a href="pages/#.html">History</a></li>
+                <li><a href="pages/history-refactor.html">Stew Recipe</a></li>
+                <li><a href="pages/stew.html">Stew Recipe</a></li>
+                <li><a href="pages/theater2.html">Theater Bill</a></li>
+                <li><a href="pages/cascade.html">Cascades</a></li>
+                <li><a href="pages/fluid.html">Fluid</a></li>
+                <li><a href="pages/media-queries.html">Media Queries</a></li>
+                <li><a href="pages/optimizing-images.html">Optimizing Images</a></li>
+                <li><a href="pages/orcas.html">Orcas Island</a></li>
+                <li><a href="pages/lopez.html">Lopez Island/a></li>
+            </ul>
+        </div>
+    </nav>
     <header>
         <a href="../index.html" target="_blank">go to home</a>
         <img src="SJIVB" alt="SJIVB" class="logo">
@@ -26,13 +52,13 @@
             <h1>lopez island</h1>
         </div>
     </header>
-    <nav class="island">
+    <!-- <nav class="island">
         <ul>
             <a href="orcas.html"><li>ORCAS ISLAND</li></a>
             <a href="sanjuan.html"><li>SAN JUAN ISLAND</li></a>
             <a href="lopez.html"><li>LOPEZ ISLAND</li></a>
         </ul>
-    </nav>
+    </nav> -->
     <main>
         <section class="item1"></section>
         <section class="item2">
