--- a/pages/media-queries.html
+++ b/pages/media-queries.html
@@ -7,6 +7,7 @@
     <link href="../styles/beyond" rel="stylesheet" type="text/css">
     <link href="../styles/2000.css" rel="stylesheet" type="text/css">
     <link href="../styles/1281.css" rel="stylesheet" type="text/css" media="screen and (min-width:962px) and (max-width:1281px)">
+    <link href="../styles/mobile-nav.css" rel="stylesheet" types="text/css">
     <style>
         /* tablets, landscape ipads, smaller laptops and small deskstops */
         @media screen and (max-width:961px)
@@ -45,6 +46,31 @@
     </style>
 </head>
 <body>
+    <nav class="navbar">
+        <div class="page-title">
+            <p>
+                Graph 130 - Spring 2024
+            </p>
+        </div>
+        <a href="#" class="toggle-button"></a>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <div class="navbar-links">
+            <ul>
+                <li><a href="pages/#.html">History</a></li>
+                <li><a href="pages/history-refactor.html">Stew Recipe</a></li>
+                <li><a href="pages/stew.html">Stew Recipe</a></li>
+                <li><a href="pages/theater2.html">Theater Bill</a></li>
+                <li><a href="pages/cascade.html">Cascades</a></li>
+                <li><a href="pages/fluid.html">Fluid</a></li>
+                <li><a href="pages/media-queries.html">Media Queries</a></li>
+                <li><a href="pages/optimizing-images.html">Optimizing Images</a></li>
+                <li><a href="pages/orcas.html">Orcas Island</a></li>
+                <li><a href="pages/lopez.html">Lopez Island/a></li>
+            </ul>
+        </div>
+    </nav>
     <h1>Mobile Responsive Design</h1>
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</p>
 
