--- a/pages/optimizing-images.html
+++ b/pages/optimizing-images.html
@@ -46,16 +46,42 @@
             font-family: "Montserrat", sans-serif;
         }
     </style>
+    <link href="../styles/mobile-nav.css" rel="stylesheet" types="text/css">
 </head>
 <body>
-    <nav class="pure-g sample">
+    <nav class="navbar">
+        <div class="page-title">
+            <p>
+                Graph 130 - Spring 2024
+            </p>
+        </div>
+        <a href="#" class="toggle-button"></a>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <div class="navbar-links">
+            <ul>
+                <li><a href="pages/#.html">History</a></li>
+                <li><a href="pages/history-refactor.html">Stew Recipe</a></li>
+                <li><a href="pages/stew.html">Stew Recipe</a></li>
+                <li><a href="pages/theater2.html">Theater Bill</a></li>
+                <li><a href="pages/cascade.html">Cascades</a></li>
+                <li><a href="pages/fluid.html">Fluid</a></li>
+                <li><a href="pages/media-queries.html">Media Queries</a></li>
+                <li><a href="pages/optimizing-images.html">Optimizing Images</a></li>
+                <li><a href="pages/orcas.html">Orcas Island</a></li>
+                <li><a href="pages/lopez.html">Lopez Island/a></li>
+            </ul>
+        </div>
+    </nav>
+    <!-- <nav class="pure-g sample">
             <div class="pure-u-1-5"><a href="../index.html">Home</a></div>
             <div class="pure-u-1-5"><a href="history-refactor.html">History</a></div>
             <div class="pure-u-1-5"><a href="theater2.html">Theater</a></div>
             <div class="pure-u-1-5"><a href="stew.html">Stew</a></div>
             <div class="pure-u-1-5"><a href="cascades.html">Cascades</a></div>
             <div class="pure-u-1-5"><a href="optimizing-images.html">Images</a></div>
-    </nav>
+    </nav> -->
 
 <h1>Optimizing Images</h1>
     <article class="dexter">
