--- a/pages/stew.html
+++ b/pages/stew.html
@@ -15,8 +15,34 @@
                 width: 560px;
             } */
     </style> -->
+    <link href="../styles/mobile-nav.css" rel="stylesheet" types="text/css">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="page-title">
+            <p>
+                Graph 130 - Spring 2024
+            </p>
+        </div>
+        <a href="#" class="toggle-button"></a>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <div class="navbar-links">
+            <ul>
+                <li><a href="pages/#.html">History</a></li>
+                <li><a href="pages/history-refactor.html">Stew Recipe</a></li>
+                <li><a href="pages/stew.html">Stew Recipe</a></li>
+                <li><a href="pages/theater2.html">Theater Bill</a></li>
+                <li><a href="pages/cascade.html">Cascades</a></li>
+                <li><a href="pages/fluid.html">Fluid</a></li>
+                <li><a href="pages/media-queries.html">Media Queries</a></li>
+                <li><a href="pages/optimizing-images.html">Optimizing Images</a></li>
+                <li><a href="pages/orcas.html">Orcas Island</a></li>
+                <li><a href="pages/lopez.html">Lopez Island/a></li>
+            </ul>
+        </div>
+    </nav>
     <div class="stew-content">   
     <h1 style="color: #805E28; font-size: 26px;">How To Make the Best Beef Stew from Scratch</h1>
     <p>Homemade beef stew is a dish that will serve you well through long winters and family visits and other small moments of need.</p>
