--- a/pages/theater2.html
+++ b/pages/theater2.html
@@ -9,17 +9,43 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 <link href="../styles/mobile.css" rel="stylesheet" type="text/css">
+<link href="../styles/mobile-nav.css" rel="stylesheet" types="text/css">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="page-title">
+            <p>
+                Graph 130 - Spring 2024
+            </p>
+        </div>
+        <a href="#" class="toggle-button"></a>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <div class="navbar-links">
+            <ul>
+                <li><a href="pages/#.html">History</a></li>
+                <li><a href="pages/history-refactor.html">Stew Recipe</a></li>
+                <li><a href="pages/stew.html">Stew Recipe</a></li>
+                <li><a href="pages/theater2.html">Theater Bill</a></li>
+                <li><a href="pages/cascade.html">Cascades</a></li>
+                <li><a href="pages/fluid.html">Fluid</a></li>
+                <li><a href="pages/media-queries.html">Media Queries</a></li>
+                <li><a href="pages/optimizing-images.html">Optimizing Images</a></li>
+                <li><a href="pages/orcas.html">Orcas Island</a></li>
+                <li><a href="pages/lopez.html">Lopez Island/a></li>
+            </ul>
+        </div>
+    </nav>
     <header>
         <img src="../images/theater-logo.png" width="100px" height="auto">
-        <nav>
+        <!-- <nav>
             <p>Home</p>
             <p>Shows</p>
             <p>Tickets</p>
             <p>Directions</p>
             <p>Contract</p>
-        </nav>
+        </nav> -->
     </header>
     <main>
         <article>
