--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li><a href="pages/media-queries.html">Media Queries</a></li>
                 <li><a href="pages/optimizing-images.html">Optimizing Images</a></li>
                 <li><a href="pages/orcas.html">Orcas Island</a></li>
-                <li><a href="pages/lopez.html">Lopez Island/a></li>
+                <li><a href="pages/lopez.html">Lopez Island</a></li>
             </ul>
         </div>
     </nav>
