--- a/pages/cascades.html
+++ b/pages/cascades.html
@@ -12,14 +12,40 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Special+Elite&display=swap" rel="stylesheet">
+<link href="../styles/mobile-nav.css" rel="stylesheet" types="text/css">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="page-title">
+            <p>
+                Graph 130 - Spring 2024
+            </p>
+        </div>
+        <a href="#" class="toggle-button"></a>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <div class="navbar-links">
+            <ul>
+                <li><a href="pages/#.html">History</a></li>
+                <li><a href="pages/history-refactor.html">Stew Recipe</a></li>
+                <li><a href="pages/stew.html">Stew Recipe</a></li>
+                <li><a href="pages/theater2.html">Theater Bill</a></li>
+                <li><a href="pages/cascade.html">Cascades</a></li>
+                <li><a href="pages/fluid.html">Fluid</a></li>
+                <li><a href="pages/media-queries.html">Media Queries</a></li>
+                <li><a href="pages/optimizing-images.html">Optimizing Images</a></li>
+                <li><a href="pages/orcas.html">Orcas Island</a></li>
+                <li><a href="pages/lopez.html">Lopez Island</a></li>
+            </ul>
+        </div>
+    </nav>
     <article class="container">
         <header>
              <h1>The Cascade Mountain Range</h1>
              <h2>Hiking and Camping Resources</h2>
              
-             <nav>
+             <!-- <nav>
                 <ul>
                     <li><a href="../index.html">Home</a> </li>
                     <li><a href="#">Trails</a> </li>
@@ -27,7 +53,7 @@
                     <li><a href="#">Maps</a> </li>
                     <li><a href="#">Products</a> </li>
                 </ul>
-             </nav>
+             </nav> -->
         </header>
         <section class="content">
             <p>The Cascade Range (or Cascades) is a major mountain range of western North America, extending from southern British Columbiathrough Washington and Oregon to Northern California. It includes both non-volcanic mountains, such as the North Cascades, and the notable volcanoes known as the High Cascades. The small part of the range in British Columbia is referred to as the Canadian Cascades or, locally, as the Cascade Mountains. The latter term is also sometimes used by Washington residents to refer to the Washington section of the Cascades in addition to North Cascades, the more usual U.S. term, as in North Cascades National Park. The highest peak in the range is Mount Rainier in Washington at 14,411 feet (4,392 m).</p>
