fixed naming issue with the nav-bar

--- a/pages/fluid.html
+++ b/pages/fluid.html
@@ -10,7 +10,7 @@
     <link href="../styles/mobile-nav.css" rel="stylesheet" types="text/css">
 </head>
 <body class="fluid">
-    <nav class="navbar">
+    <nav class="nav-bar">
         <div class="page-title">
             <p>
                 Graph 130 - Spring 2024
