--- a/pages/history-refactor.html
+++ b/pages/history-refactor.html
@@ -11,7 +11,7 @@
     <link href="../styles/mobile-nav.css" rel="stylesheet" types="text/css">
 </head>
 <body class="history">
-    <nav class="navbar">
+    <nav class="nav-bar">
         <div class="page-title">
             <p>
                 Graph 130 - Spring 2024
