--- a/pages/lopez.html
+++ b/pages/lopez.html
@@ -13,7 +13,7 @@
 <link href="../styles/mobile-nav.css" rel="stylesheet" types="text/css">
 </head>
 <body>
-    <nav class="navbar">
+    <nav class="nav-bar">
         <div class="page-title">
             <p>
                 Graph 130 - Spring 2024
