--- a/pages/media-queries.html
+++ b/pages/media-queries.html
@@ -46,7 +46,7 @@
     </style>
 </head>
 <body>
-    <nav class="navbar">
+    <nav class="nav-bar">
         <div class="page-title">
             <p>
                 Graph 130 - Spring 2024
