worked on fixing lopez.html

--- a/pages/lopez.html
+++ b/pages/lopez.html
@@ -40,7 +40,7 @@
     </nav>
     <header>
         <a href="../index.html" target="_blank">go to home</a>
-        <img src="SJIVB" alt="SJIVB" class="logo">
+        <img src="../images/SJIVB.png" alt="SJIVB" class="logo1">
         <search calss="search">
             <form>
                 <lable for="islands">Search our Site</lable>
@@ -48,10 +48,11 @@
                 <button type="submit">Search</button>
             </form>
         </search>
+    </header>
+
         <div class="hero-lopez">
             <h1>lopez island</h1>
         </div>
-    </header>
     <!-- <nav class="island">
         <ul>
             <a href="orcas.html"><li>ORCAS ISLAND</li></a>
