added a nav to all my sites and connected them to each other

--- a/pages/optimizing-images.html
+++ b/pages/optimizing-images.html
@@ -55,14 +55,14 @@
                 Graph 130 - Spring 2024
             </p>
         </div>
-        <a href="#" class="toggle-button"></a>
+        <a href="#" class="toggle-button">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
+    </a>
         <div class="navbar-links">
             <ul>
-                <li><a href="pages/#.html">History</a></li>
-                <li><a href="pages/history-refactor.html">Stew Recipe</a></li>
+                <li><a href="pages/history-refactor.html">History</a></li>
                 <li><a href="pages/stew.html">Stew Recipe</a></li>
                 <li><a href="pages/theater2.html">Theater Bill</a></li>
                 <li><a href="pages/cascade.html">Cascades</a></li>
@@ -140,5 +140,6 @@
         <img src="../images/09.jpg" alt="Camp table" width 400px>
         <img src="../images/10.jpg" alt="Tent at the beach" width 400px>
     </article>
+    <script src="../scripts/mobile-nav.js"></script>
 </body>
 </html>
