--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
                 Graph 130 - Spring 2024
             </p>
         </div>
-        <a href="#" class="toggle-button"></a>
+        <a href="#" class="toggle-button">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
+    </a>
         <div class="navbar-links">
             <ul>
-                <li><a href="pages/#.html">History</a></li>
-                <li><a href="pages/history-refactor.html">Stew Recipe</a></li>
+                <li><a href="pages/history-refactor.html">History</a></li>
                 <li><a href="pages/stew.html">Stew Recipe</a></li>
                 <li><a href="pages/theater2.html">Theater Bill</a></li>
                 <li><a href="pages/cascade.html">Cascades</a></li>
@@ -41,19 +41,20 @@
     <h1>Shane Van Pelt</h1>
     <h2>Everett Community College - Graph130</h2>
 
-<h3>How many quarters have you attended EvCC?</h3>
-<p>This will be my 6th quarter here at EvCC</p>
+    <h3>How many quarters have you attended EvCC?</h3>
+    <p>This will be my 6th quarter here at EvCC</p>
 
-<h3>What degree/certificate program are you pursuing</h3>
-<p>I am pursuing a graphic design degree as well as a transferable AA</p>
+    <h3>What degree/certificate program are you pursuing</h3>
+    <p>I am pursuing a graphic design degree as well as a transferable AA</p>
 
-<h3>Why did you choose this degree/certificate?</h3>
-<p>I decided to choose a graphic design degree because I really enjoy graphic design and have been taking graphic design classes since high school. I want the transferable AA because I do not know if I will try and get another degree after my graphic design degree has been completed.</p>
+    <h3>Why did you choose this degree/certificate?</h3>
+    <p>I decided to choose a graphic design degree because I really enjoy graphic design and have been taking graphic design classes since high school. I want the transferable AA because I do not know if I will try and get another degree after my graphic design degree has been completed.</p>
 
-<h3>What artist/designer inspires you? Why?</h3>
-<p>I currently don't follow any designers or artists. However I would say that Chris Larson and Robert Lake inspire and teach me since they are my teachers and are currently both working in fields really close to my dream job</p>
+    <h3>What artist/designer inspires you? Why?</h3>
+    <p>I currently don't follow any designers or artists. However I would say that Chris Larson and Robert Lake inspire and teach me since they are my teachers and are currently both working in fields really close to my dream job</p>
 
-<h3>What is your favorite color?  (Please, use a hex code and style your answer with that color.)</h3>
-<p style="color: purple">My favorite color is Purple</p>
+    <h3>What is your favorite color?  (Please, use a hex code and style your answer with that color.)</h3>
+    <p style="color: purple">My favorite color is Purple</p>
+    <script src="scripts/mobile-nav.js"></script>
 </body>
 </html>
