--- a/pages/cascades.html
+++ b/pages/cascades.html
@@ -21,14 +21,14 @@
                 Graph 130 - Spring 2024
             </p>
         </div>
-        <a href="#" class="toggle-button"></a>
+        <a href="#" class="toggle-button">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
+    </a>
         <div class="navbar-links">
             <ul>
-                <li><a href="pages/#.html">History</a></li>
-                <li><a href="pages/history-refactor.html">Stew Recipe</a></li>
+                <li><a href="pages/history-refactor.html">History</a></li>
                 <li><a href="pages/stew.html">Stew Recipe</a></li>
                 <li><a href="pages/theater2.html">Theater Bill</a></li>
                 <li><a href="pages/cascade.html">Cascades</a></li>
@@ -104,5 +104,6 @@
             <p>content taken from wikipedia <a href="http://en.wikipedia.org/wiki/Cascade_Range" target="_blank">wikipedia</a>Shane Van Pelt 2024. Everett Community College Graph 130 web coding project.</p>
         </footer>
     </article> <!--closes container-->
+    <script src="../scripts/mobile-nav.js"></script>
 </body>
 </html>
