--- a/pages/history-refactor.html
+++ b/pages/history-refactor.html
@@ -17,14 +17,14 @@
                 Graph 130 - Spring 2024
             </p>
         </div>
-        <a href="#" class="toggle-button"></a>
+        <a href="#" class="toggle-button">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
+    </a>
         <div class="navbar-links">
             <ul>
-                <li><a href="pages/#.html">History</a></li>
-                <li><a href="pages/history-refactor.html">Stew Recipe</a></li>
+                <li><a href="pages/history-refactor.html">History</a></li>
                 <li><a href="pages/stew.html">Stew Recipe</a></li>
                 <li><a href="pages/theater2.html">Theater Bill</a></li>
                 <li><a href="pages/cascade.html">Cascades</a></li>
@@ -95,5 +95,6 @@
     <script>
         AOS.init();
     </script>
+    <script src="../scripts/mobile-nav.js"></script>
 </body>
 </html>
