--- a/pages/lopez.html
+++ b/pages/lopez.html
@@ -19,14 +19,14 @@
                 Graph 130 - Spring 2024
             </p>
         </div>
-        <a href="#" class="toggle-button"></a>
+        <a href="#" class="toggle-button">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
+    </a>
         <div class="navbar-links">
             <ul>
-                <li><a href="pages/#.html">History</a></li>
-                <li><a href="pages/history-refactor.html">Stew Recipe</a></li>
+                <li><a href="pages/history-refactor.html">History</a></li>
                 <li><a href="pages/stew.html">Stew Recipe</a></li>
                 <li><a href="pages/theater2.html">Theater Bill</a></li>
                 <li><a href="pages/cascade.html">Cascades</a></li>
@@ -89,5 +89,6 @@
         <p class="item8">san juan expedition</p>
         <p class="item10">wa authentic</p>
     </footer>
+    <script src="../scripts/mobile-nav.js"></script>
 </body>
 </html>
