--- a/pages/media-queries.html
+++ b/pages/media-queries.html
@@ -52,14 +52,14 @@
                 Graph 130 - Spring 2024
             </p>
         </div>
-        <a href="#" class="toggle-button"></a>
+        <a href="#" class="toggle-button">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
+    </a>
         <div class="navbar-links">
             <ul>
-                <li><a href="pages/#.html">History</a></li>
-                <li><a href="pages/history-refactor.html">Stew Recipe</a></li>
+                <li><a href="pages/history-refactor.html">History</a></li>
                 <li><a href="pages/stew.html">Stew Recipe</a></li>
                 <li><a href="pages/theater2.html">Theater Bill</a></li>
                 <li><a href="pages/cascade.html">Cascades</a></li>
@@ -77,6 +77,7 @@
     <p>In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.</p>
 
     <p>Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,</p>
-
+    
+    <script src="../scripts/mobile-nav.js"></script>
 </body>
 </html>
