--- a/pages/theater2.html
+++ b/pages/theater2.html
@@ -18,14 +18,14 @@
                 Graph 130 - Spring 2024
             </p>
         </div>
-        <a href="#" class="toggle-button"></a>
+        <a href="#" class="toggle-button">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
+    </a>
         <div class="navbar-links">
             <ul>
-                <li><a href="pages/#.html">History</a></li>
-                <li><a href="pages/history-refactor.html">Stew Recipe</a></li>
+                <li><a href="pages/history-refactor.html">History</a></li>
                 <li><a href="pages/stew.html">Stew Recipe</a></li>
                 <li><a href="pages/theater2.html">Theater Bill</a></li>
                 <li><a href="pages/cascade.html">Cascades</a></li>
@@ -67,5 +67,7 @@
     <footer>
     <p>“Ken Ludwig’s Sherwood: The Adventures of Robin Hood” is presented by arrangement with Concord Theatricals on behalf of Samuel French, Inc. <a href="https://www.concordtheatricals.com/" target="_blank">www.concordtheatricals.com</a></p>
     </footer>
+
+    <script src="../scripts/mobile-nav.js"></script>
 </body>
 </html>
